--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_screenutil: ^1.0.2
   url_launcher: ^5.4.1
   flutter_easyrefresh: ^2.0.9
+  provide: ^1.0.2
+  fluttertoast: ^3.1.3
 
 dev_dependencies:
   flutter_test:
