--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_easyrefresh: ^2.0.9
   provide: ^1.0.2
   fluttertoast: ^3.1.3
+  fluro: "^1.5.2"
+  flutter_html: ^0.11.1
 
 dev_dependencies:
   flutter_test:
